PROJECT(IUH)
################ Add executables #################
set(SOURCE_FILES ${CCGL_SRC} SubbasinIUHCalculator.cpp main.cpp)
ADD_DEFINITIONS(-DMONGO_HAVE_STDINT -DUSE_MONGODB)
geo_include_directories(${GDAL_INCLUDE_DIR} ${BSON_INCLUDE_DIR} ${MONGOC_INCLUDE_DIR} ${CCGL_INC})
ADD_EXECUTABLE(iuh ${SOURCE_FILES})
target_link_libraries(iuh ${GDAL_LIBRARIES} ${BSON_LIBRARIES} ${MONGOC_LIBRARIES})
install(TARGETS iuh DESTINATION ${INSTALL_DIR})

LIST(APPEND UTILS_APPS iuh)
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET iuh PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling IUH done")
