SET(EXECNAME iuh)
PROJECT(UTILAPPS_${EXECNAME})
################ Add executables #################
set(SRC_LIST SubbasinIUHCalculator.h SubbasinIUHCalculator.cpp main.cpp)
geo_include_directories(${GDAL_INCLUDE_DIR} ${BSON_INCLUDE_DIR} ${MONGOC_INCLUDE_DIR} ${CCGL_INC})
ADD_EXECUTABLE(${EXECNAME} ${SRC_LIST})
SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(${EXECNAME} ${CCGLNAME} ${GDAL_LIBRARIES} ${BSON_LIBRARIES} ${MONGOC_LIBRARIES})
### For Xcode generator, specific LLVM-Clang installed by brew, and add link library of OpenMP explicitly.
IF(XCODE AND LLVM_FOUND)
    TARGET_LINK_LIBRARIES(${EXECNAME} ${OpenMP_LIBRARY})
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_CC ${LLVM_ROOT_DIR}/bin/clang)
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_CXX ${LLVM_ROOT_DIR}/bin/clang++)
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_COMPILER_INDEX_STORE_ENABLE "No")
ENDIF()
install(TARGETS ${EXECNAME} DESTINATION ${INSTALL_DIR})

LIST(APPEND UTILS_APPS ${EXECNAME})
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET ${EXECNAME} PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling ${EXECNAME} done")
