SET(EXECNAME mask_raster)
PROJECT(UTILAPPS_${EXECNAME})
################ Add executables #################
file(GLOB SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)
geo_include_directories(${GDAL_INCLUDE_DIR} ${CCGL_INC})
# Not need MongoDB support
REMOVE_DEFINITIONS(-DMONGO_HAVE_STDINT -DUSE_MONGODB)
ADD_EXECUTABLE(${EXECNAME} ${SRC_LIST})
SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(${EXECNAME} ${CCGLNAME} ${GDAL_LIBRARIES})
install(TARGETS ${EXECNAME} DESTINATION ${INSTALL_DIR})

LIST(APPEND UTILS_APPS ${EXECNAME})
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET ${EXECNAME} PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling ${EXECNAME} done")
