SET(EXECNAME reclassify)
PROJECT(UTILAPPS_${EXECNAME})
################ Add executables #################
file(GLOB SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)
geo_include_directories(${GDAL_INCLUDE_DIR} ${CCGL_INC})
# Not need MongoDB support
REMOVE_DEFINITIONS(-DMONGO_HAVE_STDINT -DUSE_MONGODB)
ADD_EXECUTABLE(${EXECNAME} ${SRC_LIST})
SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(${EXECNAME} ${CCGLNAME} ${GDAL_LIBRARIES})
### For Xcode generator, specific LLVM-Clang installed by brew, and add link library of OpenMP explicitly.
IF(XCODE AND LLVM_FOUND)
    TARGET_LINK_LIBRARIES(${EXECNAME} ${OpenMP_LIBRARY})
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_CC ${LLVM_ROOT_DIR}/bin/clang)
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_CXX ${LLVM_ROOT_DIR}/bin/clang++)
    SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES XCODE_ATTRIBUTE_COMPILER_INDEX_STORE_ENABLE "No")
ENDIF()
install(TARGETS ${EXECNAME} DESTINATION ${INSTALL_DIR})

LIST(APPEND UTILS_APPS ${EXECNAME})
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET ${EXECNAME} PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling ${EXECNAME} done")
